# flm-templates

./: .gitignore  README.md  pyproject.toml
flm_templates/: _jinja2template.py
flm_templates/templates/html/: docgen2.yaml
flm_templates/templates/html/docgen2/: autotoc.js  docgen2style.css  main.html
flm_templates/templates/html/oldtextbook/: main_old_textbook.html
flm_templates/templates/html/sunset/: main.html
llm_templates/: _jinja2template.py
llm_templates/templates/html/: oldtextbook.yaml  sunset.yaml
llm_templates/templates/html/oldtextbook/: oldtxtbkstyle.css
llm_templates/templates/html/sunset/: sunsetstyle.css
